Archive2/56/8f46767b3e3896/output
main.cpp:10:9: error: no matching constructor for initialization of 'foo'
    foo y = foo();
        ^   ~~~~~
main.cpp:3:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    foo() = default;
    ^
1 error generated.
